# rustls-openssl-compat

./: Cargo.toml  MATRIX.md  Makefile  README.md  build.rs  flake.nix
.github/workflows/: libssl.yaml
admin/: format  matrix.py  sort-entrypoints.py
rustls-libssl/: Cargo.toml  MATRIX.md  Makefile  README.md  build.rs  simpleserv.sh
rustls-libssl/admin/: format  libssl.num  matrix.py  sort-entrypoints.py
rustls-libssl/src/: bio.rs  cache.rs  callbacks.rs  conf.rs  constants.rs  entry.rs  error.rs  evp_pkey.rs  ffi.rs  lib.rs  miri.rs  not_thread_safe.rs  sign.rs  verifier.rs  x509.rs
rustls-libssl/tests/: client.c  config.c  helpers.h  maybe-valgrind.sh  nginx.conf  nginx_1_24.conf  runner.rs  server.c
src/: bio.rs  cache.rs  callbacks.rs  conf.rs  constants.rs  entry.rs  error.rs  evp_pkey.rs  ex_data.rs  ffi.rs  lib.rs  miri.rs  not_thread_safe.rs  sign.rs  verifier.rs  x509.rs
tests/: ciphers.c  client.c  config.c  constants.c  haproxy.conf  helpers.h  nginx.conf  nixos.nix  runner.rs  server.c
