[package]
name = "rustls-libssl"
version = "0.2.1"
edition = "2021"
build = "build.rs"
rust-version = "1.88"

[lib]
name = "ssl"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11"
log = "0.4"
openssl-probe = "0.1"
openssl-sys = "0.9"
rustls = "0.23.31"

[dev-dependencies]
pretty_assertions = "1"

[lints.rust]
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_extern_crates = "warn"
unused_qualifications = "warn"

[lints.clippy]
manual_let_else = "warn"
use_self = "warn"
